Fix footer text alignment

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -13,8 +13,9 @@
   z-index: 1000;
 
   .footer-side {
-    max-width: 50px;
+    max-width: 60px;
     flex: 1;
+    text-align: center;
   }
 
   h4 {
